--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "reddish-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "backend",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
-  "author": "Amanpreet .",
+  "author": "Amanpreet",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
